# DEV-FORTRAN-UTIL-Fortran_Utilities

./: README.md  forut062.txt  notes.os2
ForUtil-0.62/: CHANGES  INSTALL  README  autoconf.h  config.cache  configure.in  configure.log.01  configure.orig  version.h
ForUtil-0.62/commons/: Makefile  get_common.c  lib_commons.c  lib_commons.h  lib_commons.h.diff_os2  scan_commons.c  scan_commons.l
ForUtil-0.62/fflow/: Makefile.orig  Makefile.os2  fflow.c  fflow.c.orig  libflow.c  libflow.c.orig  libflow.h  notes.os2
ForUtil-0.62/ffscan/: Makefile  Makefile.in  Makefile.orig  ffscan  ffscan.l
ForUtil-0.62/ftags/: Makefile.conf  Makefile.in  ftags.c
ForUtil-0.62/lib/: Makefile.conf  Makefile.in  Makefile.os2  environment.c  environment.c.orig  forutil.h  memmacros.h  msdospwd.h  notes.os2
ForUtil-0.62/man/: add_urls.sh  makefile  man2asci.sh
ForUtil-0.62/man/doc/: fflow.txt  ffscan.txt  ftags.txt
ForUtil-0.62/man/html/: fflow.html  get_common.html  scan_commons.html
ForUtil-0.62/man/man/: fflow.1  list_commons.1  scan_commons.1
ForUtil-0.62/man/preformat/: fflow.1  ftags.1  get_common.1  list_commons.1
ForUtil062/: notes.os2
ForUtil062/ForUtil-0.62/: LICENSE  Makefile  Makefile.in  autoconf.h.in  autoconf.h.os2.01  config.status  configure
ForUtil062/ForUtil-0.62/commons/: Makefile  Makefile.in  lib_commons.h  list_commons.c
ForUtil062/ForUtil-0.62/fflow/: Makefile.in  fflow.l
ForUtil062/ForUtil-0.62/ffscan/: ffscan.c
ForUtil062/ForUtil-0.62/ftags/: Makefile  ftags.l  surfrotwf.f  tags
ForUtil062/ForUtil-0.62/lib/: README  SplitPath.c  (+4 more)
(+39 files in other folders)
