dnl Process this file with autoconf to produce a configure script.
AC_INIT(lib/SplitPath.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_LEX
AC_PROG_INSTALL

dnl Checks for libraries.
dnl Replace `main' with a function in -lgdbm:
AC_CHECK_LIB(gdbm, gdbm_fetch, , 
AC_MSG_WARN(You need gdbm in order for the common stuff to work.))

dnl Checks for header files.
AC_CONFIG_HEADER(autoconf.h)
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_TYPE_UID_T

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_CLOSEDIR_VOID
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(getcwd mkdir strerror strstr uname raise atexit)

AC_OUTPUT(Makefile lib/Makefile commons/Makefile ffscan/Makefile fflow/Makefile ftags/Makefile)
